Přidání prvního odstavce

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h2>Linhart</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dignissimos nisi perferendis explicabo, cumque
+        quasi cum ut, nihil voluptatem delectus porro unde sapiente architecto reiciendis! Maxime, adipisci ad!
+        Voluptatem, voluptas!
+    </p>
 
 </body>
 </html>
